--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <body>
 	<div id="container"></div>
 	<script src="js/three.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="main.js"></script>
 </body>
 </html>
