update three.js version, add cannon.js

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 	<div id="container"></div>
 	<script src="js/three.min.js"></script>
+	<script src="js/cannon.min.js"></script>
 	<script src="main.js"></script>
 </body>
 </html>
