--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<div id="container"></div>
 	<script src="js/three.min.js"></script>
 	<script src="js/cannon.min.js"></script>
+	<script src="js/keyboard.js"></script>
 	<script src="main.js"></script>
 </body>
 </html>
